# flap

./: Cargo.toml  README.md
.cargo/: config.toml
src/: addr.rs  lib.rs  main.rs  serial.rs  vga.rs
src/interrupts/: const.rs  consts.rs  interrupt_handlers.rs  mod.rs
src/interrupts/drivers/: mod.rs
src/memory/: address.rs  mod.rs
src/memory/paging/: consts.rs  frame.rs  mod.rs  page.rs  page_table.rs
src/structs/: gdt.rs  idt.rs  tss.rs
tests/: should_panic.rs
