[package]
name = "flap_os"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9"
spin = "=0.5.2"
volatile = "0.2.6"
uart_16550 = "0.2.18"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
build-command = ["build"]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]
test-args = [
            "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
            "-serial", "stdio",
            "-display", "none"
            ]
test-timeout = 300
test-success-exit-code = 33

